@@ -1,3 +1,8 @@
+2011-05-21  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
+* sio.c: Fixed a bug with SIO sounds remaining audible after saving to tape
+  with SIO patch (reported by Krzysztof Karkosza).
+
+
 2011-05-18  Tomasz Krasuski <kr0tki@poczta.onet.pl>
 * cassette.c: Fixed a bug with CASSETTE_description not being properly ended
   with '\0' when tape is inserted (reported by Achim Haertel).
